# indonesia-civic-stack

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSES.md  PHASE2_SUMMARY.md  PROMPTS.md  README.md  SHAPES.MD  SKILL.md  SPRINT2-PREP.md  app.py  docker-compose.yml  pyproject.toml  server.json  server.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  degraded_module.yml  module_addition.yml
.github/workflows/: ci.yml
civic_stack/: __init__.py  app.py  cli.py  server.py
civic_stack/ahu/: Dockerfile  __init__.py  app.py  browser.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/bmkg/: Dockerfile  __init__.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/bpjph/: Dockerfile  __init__.py  app.py  browser.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/bpom/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/bps/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/djpb/: __init__.py  normalizer.py  scraper.py
civic_stack/jdih/: __init__.py  normalizer.py  scraper.py
civic_stack/kpu/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/ksei/: __init__.py  normalizer.py  scraper.py
civic_stack/lhkpn/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/lpse/: Dockerfile  README.md  __init__.py  router.py  scraper.py  server.py
civic_stack/ojk/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/oss_nib/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
civic_stack/shared/: __init__.py  http.py  mcp.py  schema.py
civic_stack/simbg/: Dockerfile  README.md  __init__.py  router.py  scraper.py  server.py
docs/: inaproc-exploration.md  module-spec.md  openapi.json  phase2-tickets.md  visualiser.html
examples/halalkah/: halal_check.py  migration_guide.md  smoke_test.py
modules/: __init__.py
modules/ahu/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/bmkg/: README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/bpjph/: Dockerfile  README.md  __init__.py  app.py  browser.py  normalizer.py  router.py  scraper.py  server.py
modules/bpom/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/bps/: Dockerfile  README.md  __init__.py  normalizer.py  router.py  scraper.py  server.py
modules/djpb/: __init__.py  normalizer.py  scraper.py
modules/jdih/: normalizer.py  scraper.py
modules/kpu/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/ksei/: __init__.py  normalizer.py  scraper.py
modules/lhkpn/: README.md  __init__.py  normalizer.py  router.py  scraper.py  server.py
modules/lpse/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/ojk/: Dockerfile  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/oss-nib/: Dockerfile  __init__.py
modules/oss_nib/: Dockerfile  README.md  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
modules/simbg/: Dockerfile  LICENSE  __init__.py  app.py  normalizer.py  router.py  scraper.py  server.py
proxy/: README.md  worker.js  wrangler.toml
references/: endpoint-status.md  geo-restrictions.md  lhkpn-recaptcha-bypass-2026-04.md  lpse-migration-analysis-2026-03.md  lpse-portal-urls-2026-03.txt  portal-patterns.md  vps-hardening.md
scripts/: export_openapi.py  test_module.py
shared/: __init__.py  http.py  mcp.py  schema.py
tests/: test_schema.py  test_shared_schema.py
tests/ahu/: test_ahu.py
tests/ahu/fixtures/: company_found.html  company_not_found.html  search_results.html
tests/bmkg/: test_bmkg.py
tests/bmkg/cassettes/: earthquake_history.yaml  earthquake_latest.yaml
tests/bpjph/: test_bpjph.py
tests/bpjph/fixtures/: cert_found.html  cert_not_found.html  search_results.html
tests/bpom/: test_bpom.py
tests/bpom/cassettes/: expired.yaml  found.yaml  not_found.yaml  search_multi.yaml
tests/bps/: test_bps.py
tests/bps/cassettes/: dataset_not_found.yaml  dataset_search.yaml  indicator_timeseries.yaml
tests/djpb/: test_djpb.py
tests/jdih/: test_jdih.py
tests/kpu/: test_kpu.py
tests/kpu/cassettes/: candidate_found.yaml  candidate_not_found.yaml  election_results.yaml  search_multi.yaml
tests/ksei/: test_ksei.py
tests/lhkpn/: test_lhkpn.py
tests/lhkpn/cassettes/: official_found.yaml  official_not_found.yaml  search_multi.yaml
tests/lpse/: test_lpse.py
tests/lpse/cassettes/: partial_results.yaml  tender_search.yaml  vendor_found.yaml  vendor_not_found.yaml
tests/ojk/: test_ojk.py
tests/ojk/cassettes/: institution_found.yaml  institution_not_found.yaml  waspada_found.yaml
tests/oss-nib/: test_oss_nib.py
tests/oss-nib/fixtures/: nib_found.html  nib_not_found.html  search_results.html
tests/simbg/: test_simbg.py
tests/simbg/cassettes/: permit_found.yaml  (+1 more)
