[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indonesia-civic-stack"
version = "0.1.0"
description = "Production-ready scrapers, normalizers, and API wrappers for Indonesian government data sources"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "vcrpy>=6.0.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-beautifulsoup4",
]
pdf = [
    "pdfplumber>=0.11.0",
    "anthropic>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "modules"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
